glcontext: Make gst_gl_context_egl_activate fail if the old surface could not be destroyed

https://bugzilla.gnome.org/show_bug.cgi?id=746251